# obsidian_backuper

./: .coverage  .coveragerc  .env.dist  .gitignore  MANIFEST.in  README.md  build_and_install.sh  coverage.xml  pyproject.toml  reinstall.sh  requirements.txt  run.py  run_backup.py  setup_venv.sh
.github/workflows/: test.yml
bash_libs/: log.sh
src/obsidian_backuper/: __init__.py  cli.py  core.py  crypto.py  exceptions.py  obsidian_decryptor.py  tui.py
src/obsidian_backuper/style/: tui.css
tests/: test_cli.py  test_core.py  test_crypto.py  test_exceptions.py  test_obsidian_decryptor.py
