[project]
name = "obsidian_backuper"
version = "1.0.2"
description = "Secure backup tool for Obsidian vaults with encryption"
authors = [{name = "NikitaMarakushev", email = "nikitamarakushev@yandex.ru"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.40",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.2.1",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "textual>=0.54.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0"
]

[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
obsidian_backuper = ["tui.css"]

[project.scripts]
obsidian-backup = "obsidian_backuper.cli:main"